make jar releasable